Ending registration module and menu styles

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
+            <link rel="stylesheet" type="text/css" href="{{ asset('Assets/css/styles.css') }}">
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
@@ -14,6 +15,18 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+            <div class="header">
+            <h1>Tareas Symfony</h1>
+            <ul id="menu">
+                <li><a href="{{ path('task') }}">Inicio</a></li>
+                <li><a href="">Mis tareas</a></li>
+                <li><a href="{{ path('login') }}">Login</a></li>
+                <li><a href="{{ path('register') }}">Registro</a></li>
+            </ul>
+            </div>
+            <div class="clearfix"></div>
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
