User access and logout completed

--- a/public/Assets/css/styles.css
+++ b/public/Assets/css/styles.css
@@ -85,3 +85,8 @@ input[type="submit"]:hover{
 
     color: white;
 }
+.right{
+    float: right !important;
+    border-right: 0px;
+    border-left: 1px solid #ccc;
+}
