--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -1,20 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TaskController!{% endblock %}
+{% block title %}Listado de tareas{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        <h2>Todas las tareas</h2>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/taskmanager/src/Controller/TaskController.php'|file_link(0) }}">src/Controller/TaskController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/taskmanager/templates/task/register.html.twig'|file_link(0) }}">templates/task/index.html.twig</a></code></li>
-    </ul>
+        <table>
+                <tr>
+                        <th>Tarea</th>
+                        <th>Prioridad</th>
+                        <th>Horas presupuestadas</th>
+                        <th>Ver</th>
+                        <th>Editar</th>
+                        <th>Eliminar</th>
+                </tr>
+                {% for task in tasks %}
+                        <tr>
+                                <td>{{ task.title }}</td>
+                                <td>
+                                {% if task.priority == "Hight" %}
+                                        {{ 'Alta' }}
+                                {% endif %}
+                                {% if task.priority == "Medium" %}
+                                        {{ 'Media' }}
+                                {% endif %}
+                                {% if task.priority == "Low" %}
+                                        {{ 'Bajo' }}
+                                 {% endif %}
+                                </td>
+                                <td>{{ task.hours }}</td>
+                                <td class="button-view">
+                                    <a href="{{ path('taks_detail', {'id': task.id}) }}">Ver</a>
+                                </td>
+                                <td class="button-view">
+                                        <a href="" class="edit">Editar</a>
+                                </td>
+                                <td class="button-view">
+                                        <a href="" class="delete">Eliminar</a>
+                                </td>
+                        </tr>
+                {% endfor %}
+        </table>
 </div>
 {% endblock %}
